# qrl_cartpole

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt  setup_env.sh
configs/: dqn.yaml  dqn_100.yaml  dqn_1000.yaml  dqn_200.yaml  dqn_500.yaml  dqn_tiny.yaml  env.yaml  qdqn_2layer.yaml  qdqn_skolik.yaml
examples/: 01_modify_existing_config.py  02_new_classical_agent.py  03_new_quantum_agent.py
examples/configs/: custom_quantum.yaml  dqn_tiny_template.yaml
results/: dqn_performance.csv  qdqn_performance.csv
run_experiments/: run_classical_sweep.sh  run_dqn_1000_experiments.sh  run_dqn_100_experiments.sh  run_dqn_200_experiments.sh  run_dqn_500_experiments.sh  run_dqn_experiments.sh  run_dqn_tiny_experiments.sh  run_qdqn_2layer_experiments.sh  run_qdqn_skolik_experiments.sh
scripts/: circuit_specs.py  evaluate.py  evaluate_checkpoints.py  plot_training_curves.py  train.py
src/qrl_cartpole/: __init__.py  evaluate.py
src/qrl_cartpole/agents/: __init__.py  base_agent.py  dqn_agent.py  qdqn_skolik.py
src/qrl_cartpole/training/: trainer.py
src/qrl_cartpole/utils/: __init__.py  replay_buffer.py
tests/: test_agents.py
